fix extra button spacing

--- a/apps/src/signUpFlow/signUpFlowStyles.module.scss
+++ b/apps/src/signUpFlow/signUpFlowStyles.module.scss
@@ -70,7 +70,7 @@ span {
     padding: 30px;
     gap: 16px;
     border-radius: 4px;
-    border: 1px solid $light_gray;
+    border: 1px solid $light_gray_200;
     margin-bottom: 1rem;
   }
 
@@ -155,7 +155,6 @@ span {
 
     .shortButton {
       width: auto;
-      margin-top: 1rem;
     }
 
     .googleButton {
